--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0",
-    "tailwind-merge": "^2.2.1"
+    "swiper": "^11.0.6",
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
